# uav_testing

./: README.md
baylands/: CMakeLists.txt  package.xml
baylands/env-hooks/: 99_baylands_setup.sh.installspace.in
baylands/launch/: baylands.launch  baylands.launch.py  drone_baylands.launch  drone_baylands.launch.py
baylands/worlds/: baylands.world
ksql_airport/: CHANGELOG.rst  CMakeLists.txt  package.xml
ksql_airport/env-hooks/: 99_ksql_airport_setup.sh.develspace.in
ksql_airport/launch/: drone_ksql.launch  drone_ksql.launch.py  ksql.launch  ksql.launch.py
ksql_airport/media/: ksql_elevation.tif
ksql_airport/worlds/: ksql.world
mcmillan_airfield/: CHANGELOG.rst  CMakeLists.txt  package.xml
mcmillan_airfield/launch/: drone_mcmillan.launch  drone_mcmillan.launch.py  mcmillan.launch  mcmillan.launch.py
mcmillan_airfield/worlds/: mcmillan.world
sand_island/: CHANGELOG.rst  CMakeLists.txt  package.xml
sand_island/env-hooks/: 99_sand_island_setup.sh.in
sand_island/launch/: sand_island.launch  sand_island.launch.py
sand_island/worlds/: sand_island.world
yosemite_valley/: CHANGELOG.rst  CMakeLists.txt  package.xml
yosemite_valley/env-hooks/: 99_yosemite_valley_setup.sh.in
yosemite_valley/launch/: drone_yosemite.launch  drone_yosemite.launch.py  typhoon_yosemite.launch  yosemite.launch  yosemite.launch.py
yosemite_valley/worlds/: typhoon_yosemite.world  yosemite.world
