<?xml version="1.0"?>
<package format="2">
  <name>ksql_airport</name>
  <version>0.0.1</version>
  <description>The ksql_airport package</description>

  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>

  <license>Apache 2.0</license>

  <build_depend>ament_cmake<build_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
