<?xml version="1.0"?>
<package format="2">
  <name>mcmillan_airfield</name>
  <version>2.0.0</version>
  <description>The mcmillan_airfield package</description>

  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>
  <license>Apache 2.0</license>

  <build_depend>ament_cmake</build_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
